Fixed min-width navbar overflow issue

--- a/wondrous/static/css/style.css
+++ b/wondrous/static/css/style.css
@@ -2408,7 +2408,7 @@ a:hover {
   top: 0;
   height: 45px;
   width: 100%;
-  /*background-color: rgb(235,235,235);*/
+  min-width: 750px;
   background-color: #fbfbfb;
   z-index: 101;
   -webkit-box-shadow: 0 0 3px 0 #c7c7c7;
